--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,54 @@
 <!doctype html>
-<html>
+<html ng-app="MyApp">
+
 <head>
-  <base href="/">
-  <meta charset="utf-8" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AngularJS Starter App</title>
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/flexboxgrid.css">
-  <link rel="stylesheet" href="/css/main.css">
+    <base href="/">
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title ng-bind="$state.current.data.pageTitle"></title>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/flexboxgrid.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
-<body ng-app="MyApp">
-  <div ng-include src="'partials/header.html'"></div>
-  <div ng-view></div>
-  <div ng-include src="'partials/footer.html'"></div>
 
-  <script src="/js/lib/angular.js"></script>
-  <script src="/js/lib/angular-route.js"></script>
-  <script src="/js/lib/satellizer.js"></script>
-  <script src="/js/app.js"></script>
-  <script src="/js/controllers/contact.js"></script>
-  <script src="/js/controllers/forgot.js"></script>
-  <script src="/js/controllers/header.js"></script>
-  <script src="/js/controllers/login.js"></script>
-  <script src="/js/controllers/profile.js"></script>
-  <script src="/js/controllers/reset.js"></script>
-  <script src="/js/controllers/signup.js"></script>
-  <script src="/js/services/account.js"></script>
-  <script src="/js/services/contact.js"></script>
+<body>
+    <div ui-view="header"></div>
+    <div ui-view="partial"></div>
+    <div ui-view="footer"></div>
 
-  <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <script>
-    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-  </script>
+
+    <script src="/js/lib/angular.js"></script>
+    <script src="/js/lib/angular-route.js"></script>
+    <script src="/js/lib/angular-ui-router.min.js"></script>
+    <script src="/js/lib/satellizer.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/controllers/forgot.js"></script>
+    <script src="/js/controllers/header.js"></script>
+    <script src="/js/controllers/login.js"></script>
+    <script src="/js/controllers/profile.js"></script>
+    <script src="/js/controllers/reset.js"></script>
+    <script src="/js/controllers/signup.js"></script>
+    <script src="/js/services/account.js"></script>
+
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <script>
+        (function(b, o, i, l, e, r) {
+            b.GoogleAnalyticsObject = l;
+            b[l] || (b[l] =
+                function() {
+                    (b[l].q = b[l].q || []).push(arguments)
+                });
+            b[l].l = +new Date;
+            e = o.createElement(i);
+            r = o.getElementsByTagName(i)[0];
+            e.src = 'https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e, r)
+        }(window, document, 'script', 'ga'));
+        ga('create', 'UA-XXXXX-X', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </body>
+
 </html>
