--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,16 @@
 
 <body>
     <div ui-view="header"></div>
-    <div ui-view="partial"></div>
+    <div class="scroll">
+        <div ui-view="partial" ng-class="{backward: $state.current.data.backward}"></div>
+    </div>
     <div ui-view="footer"></div>
 
 
     <script src="/js/lib/angular.js"></script>
     <script src="/js/lib/angular-route.js"></script>
     <script src="/js/lib/angular-ui-router.min.js"></script>
+    <script src="/js/lib/angular-animate.min.js"></script>
     <script src="/js/lib/satellizer.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/controllers/forgot.js"></script>
@@ -30,6 +33,7 @@
     <script src="/js/controllers/reset.js"></script>
     <script src="/js/controllers/signup.js"></script>
     <script src="/js/services/account.js"></script>
+
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
