--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title ng-bind="$state.current.data.pageTitle"></title>
+    <link rel="stylesheet" href="/fonts/stylesheet.css">
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/flexboxgrid.css">
     <link rel="stylesheet" href="/css/main.css">
@@ -25,6 +26,7 @@
     <script src="/js/app.js"></script>
     <script src="/js/controllers/forgot.js"></script>
     <script src="/js/controllers/header.js"></script>
+    <script src="/js/controllers/home.js"></script>
     <script src="/js/controllers/login.js"></script>
     <script src="/js/controllers/profile.js"></script>
     <script src="/js/controllers/reset.js"></script>
