--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,11 @@
         <script src="/js/lib/angular-animate.min.js"></script>
         <script src="/js/lib/satellizer.js"></script>
         <script src="/js/app.js"></script>
+        <script src="js/services/account.js"></script>
         <script src="/js/controllers/home.js"></script>
         <script src="/js/controllers/login.js"></script>
         <script src="/js/controllers/signup.js"></script>
+        <script src="/js/controllers/signup2.js"></script>
 
     </body>
 </html>
