add slides and chapter logic with savepoint

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         <script src="/js/lib/satellizer.js"></script>
         <script src="/js/app.js"></script>
         <script src="js/services/account.js"></script>
+        <script src="js/services/progression.js"></script>
         <script src="/js/controllers/home.js"></script>
         <script src="/js/controllers/login.js"></script>
         <script src="/js/controllers/signup.js"></script>
