--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         <script src="/js/controllers/login.js"></script>
         <script src="/js/controllers/signup.js"></script>
         <script src="/js/controllers/signup2.js"></script>
+        <script src="/js/controllers/slide1.js"></script>
 
 
 </body>
