--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
         <script src="/js/controllers/signup.js"></script>
         <script src="/js/controllers/signup2.js"></script>
         <script src="/js/controllers/slide1.js"></script>
+        <script src="/js/controllers/slide2.js"></script>
 
 
 </body>
