question model (wip)

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
         <script src="/js/controllers/signup2.js"></script>
         <script src="/js/controllers/slide1.js"></script>
         <script src="/js/controllers/slide2.js"></script>
+        <script src="/js/controllers/slide3.js"></script>
 
 
 </body>
