--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
         <script src="/js/lib/angular-ui-router.min.js"></script>
         <script src="/js/lib/angular-animate.min.js"></script>
         <script src="/js/lib/satellizer.js"></script>
+        <script src="/js/anime.js"></script>
         <script src="/js/app.js"></script>
         <script src="js/services/account.js"></script>
         <script src="js/services/progression.js"></script>
@@ -37,7 +38,10 @@
         <script src="/js/controllers/slide1.js"></script>
         <script src="/js/controllers/slide2.js"></script>
         <script src="/js/controllers/slide3.js"></script>
-
+        <script src="/js/controllers/slide4.js"></script>
+        <script src="/js/controllers/slide5.js"></script>
+        <script src="/js/controllers/slide6.js"></script>
+        <script src="/js/controllers/slide7.js"></script>
 
 </body>
 </html>
