--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,10 @@
         <script src="/js/lib/angular-ui-router.min.js"></script>
         <script src="/js/lib/angular-animate.min.js"></script>
         <script src="/js/lib/satellizer.js"></script>
-        <script src="/js/anime.js"></script>
         <script src="/js/app.js"></script>
         <script src="js/services/account.js"></script>
         <script src="js/services/progression.js"></script>
+        <script src="js/services/navbar.js"></script>
         <script src="/js/controllers/home.js"></script>
         <script src="/js/controllers/login.js"></script>
         <script src="/js/controllers/signup.js"></script>
@@ -42,6 +42,7 @@
         <script src="/js/controllers/slide5.js"></script>
         <script src="/js/controllers/slide6.js"></script>
         <script src="/js/controllers/slide7.js"></script>
+        <script src="/js/controllers/slideCtrl.js"></script>
 
 </body>
 </html>
