video simple player

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   </div>
 
 
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.0.52/wavesurfer.min.js"></script>
         <script src="/js/lib/angular.js"></script>
         <script src="/js/lib/angular-route.js"></script>
         <script src="/js/lib/angular-ui-router.min.js"></script>
@@ -32,6 +32,7 @@
         <script src="js/services/account.js"></script>
         <script src="js/services/progression.js"></script>
         <script src="js/services/navbar.js"></script>
+        <script src="js/services/video.js"></script>
         <script src="/js/controllers/home.js"></script>
         <script src="/js/controllers/login.js"></script>
         <script src="/js/controllers/signup.js"></script>
