--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
         <script src="/js/controllers/signup.js"></script>
         <script src="/js/controllers/signup2.js"></script>
         <script src="/js/controllers/slideCtrl.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.1.5/wavesurfer.min.js"></script>
 
 
 </body>
