audio and video test

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,7 @@
     <div ui-view="partial" ng-class="{backward: $state.current.data.backward}"></div>
   </div>
 
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.0.52/wavesurfer.min.js"></script>
+        <script src="/js/lib/wavesurfer.min.js"></script>
         <script src="/js/lib/angular.js"></script>
         <script src="/js/lib/angular-route.js"></script>
         <script src="/js/lib/angular-ui-router.min.js"></script>
@@ -38,7 +37,6 @@
         <script src="/js/controllers/signup.js"></script>
         <script src="/js/controllers/signup2.js"></script>
         <script src="/js/controllers/slideCtrl.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/wavesurfer.js/1.1.5/wavesurfer.min.js"></script>
 
 
 </body>
